# Opsforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/src/opsforge/: __init__.py  config.py  db.py  logging.py  main.py  metrics.py  models.py  pipeline.py  repository.py  schemas.py  worker.py
docs/: architecture.md
runbooks/: local-deployment.md
tests/: test_api.py  test_worker.py
