[project]
name = "opsforge"
version = "0.1.0"
description = "Local OpsForge FastAPI service with an asynchronous report job pipeline."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[project.scripts]
opsforge-api = "opsforge.main:run"
opsforge-worker = "opsforge.worker:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app/src/opsforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app/src"]
